--- a/Symitar Reprogram/build.gradle
+++ b/Symitar Reprogram/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id "edu.wpi.first.GradleRIO" version "2019.0.0-alpha-3"
 }
 
-def ROBOT_CLASS = "frc.robot.Robot"
+def ROBOT_CLASS = "org.usfirst.frc.team4499.robot.Robot"
+
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
