Tried again to add a JDK to VS

--- a/CalvinMagnetar/.vscode/settings.json
+++ b/CalvinMagnetar/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "java.home": "C:/Program_Files/Java",
+    "java.home": "This PC\\C:\\Program Files\\Java\\jdk1.8.0_181",
     "editor.fontSize" : 13
-
 }
