Upgraded my eclipse project, ready to code

--- a/CalvinMagnetar/.vscode/settings.json
+++ b/CalvinMagnetar/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "java.home": "This PC\\C:\\Program Files\\Java\\jdk1.8.0_181",
+    "java.home": "C:\\Program Files\\Java\\jdk1.8.0_181",
     "editor.fontSize" : 13
 }
