--- a/Magnetar/.vscode/settings.json
+++ b/Magnetar/.vscode/settings.json
@@ -10,5 +10,7 @@
     ".classpath": true,
     ".project": true
   },
-  "wpilib.online": true
+  "wpilib.online": true,
+  "java.home": "C:\\Program Files\\Java\\jdk1.8.0_181"
+
 }
