--- a/Magnetar/.vscode/settings.json
+++ b/Magnetar/.vscode/settings.json
@@ -11,7 +11,5 @@
     ".classpath": true,
     ".project": true
   },
-  "wpilib.online": true,
-  "java.home": "C:\\Program Files\\Java\\jdk1.8.0_181"
-
+  "wpilib.online": true
 }
